CB-7 api now swagger certified. envName is in the Path and in database