@@ -1,5 +1,6 @@
 package com.sequenceiq.datalake.configuration;
 
+import java.util.Arrays;
 import java.util.List;
 
 import javax.annotation.PostConstruct;
@@ -15,6 +16,7 @@ import org.springframework.util.StringUtils;
 import com.sequenceiq.datalake.api.DatalakeApi;
 import com.sequenceiq.datalake.controller.mapper.DefaultExceptionMapper;
 import com.sequenceiq.datalake.controller.mapper.WebApplicaitonExceptionMapper;
+import com.sequenceiq.datalake.controller.sdx.SdxController;
 
 import io.swagger.jaxrs.config.BeanConfig;
 import io.swagger.jaxrs.config.SwaggerConfigLocator;
@@ -24,7 +26,7 @@ import io.swagger.jaxrs.config.SwaggerContextService;
 @Configuration
 public class EndpointConfig extends ResourceConfig {
 
-    private static final List<Class<?>> CONTROLLERS = List.of();
+    private static final List<Class<?>> CONTROLLERS = Arrays.asList(SdxController.class);
 
     private static final String VERSION_UNAVAILABLE = "unspecified";
 
